# mnist-QNN

./: .gitignore  README.md  out.txt  pyproject.toml
mnist_qnn/: train.py
tests/: test_mnist_qnn.py
